--- a/custom_components/hon/translations/it.json
+++ b/custom_components/hon/translations/it.json
@@ -658,6 +658,12 @@
             }
           }
         }
+      },
+      "notify": {
+        "state": {
+          "autosoftener": "\"Ammorbidente auto\" non è attivo, aggiungi l'ammorbidente manualmente e fai riprendere il programma.",
+          "autodetergent": "\"Detersivo auto\" non è attivo, aggiungi il detersivo manualmente e avvia nuovamente il programma."
+        }
       }
     }
   }
