notify finished program

--- a/custom_components/hon/translations/en.json
+++ b/custom_components/hon/translations/en.json
@@ -669,7 +669,8 @@
       "notify": {
         "state": {
           "autosoftener": "\"Auto Softener\" is not active, add softener manually and resume the program.",
-          "autodetergent": "\"Auto Detergent\" is not active, add the detergent manually and start the program again."
+          "autodetergent": "\"Auto Detergent\" is not active, add the detergent manually and start the program again.",
+          "finished": "The program is finished, empty the basket."
         }
       }
     }
