--- a/custom_components/hon/translations/it.json
+++ b/custom_components/hon/translations/it.json
@@ -611,6 +611,12 @@
           "program_name": {
             "name": "Programma"
           },
+          "program_description": {
+            "name": "Descrizione"
+          },
+          "program_duration": {
+            "name": "Durata"
+          },
           "spin_speed": {
             "name": "Centrifuga"
           },
