fix config stored data

--- a/custom_components/hon/translations/en.json
+++ b/custom_components/hon/translations/en.json
@@ -64,6 +64,9 @@
       },
       "pause": {
         "name": "Pause / Resume"
+      },
+      "reload": {
+        "name": "Reload Programs"
       }
     },
     "select": {
