--- a/custom_components/hon/translations/it.json
+++ b/custom_components/hon/translations/it.json
@@ -64,6 +64,9 @@
       },
       "pause": {
         "name": "Pausa / Riprendi"
+      },
+      "reload": {
+        "name": "Ricarica programmi"
       }
     },
     "select": {
